--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@types/leaflet": "^1.9.21",
+    "@vercel/blob": "^1.1.1",
     "bcryptjs": "^3.0.3",
     "iron-session": "^8.0.4",
     "jspdf": "^4.1.0",
